Various cleanups, improve tests